--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,6 +15,31 @@
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </div>
+    <div class="form-add-new">
+        <form action="">
+            <fieldset>
+                <legend>form add new user</legend>
+                <div class="input-group">
+                    <label for="">EMAIL</label>
+                    <input type="email" name="name_email">
+                </div class="input-group">
+                <div class="input-group">
+                    <label for="">NAME</label>
+                    <input type="text" name="name_ten">
+                </div>
+                <div class="input-group">
+                    <label for="">CITY</label>
+                    <input type="text" name="name_city">
+                </div>
+                <div>
+                    <button id="save_id">
+                        SAVE
+                    </button>
+                </div>
+            </fieldset>
+
+        </form>
+    </div>
 </body>
 
 </html>
