--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,19 +16,19 @@
         <a href="#about">About</a>
     </div>
     <div class="form-add-new">
-        <form action="">
+        <form action="/create-user" method="post">
             <fieldset>
                 <legend>form add new user</legend>
                 <div class="input-group">
-                    <label for="">EMAIL</label>
+                    <label for="">EMAIL: </label>
                     <input type="email" name="name_email">
                 </div class="input-group">
                 <div class="input-group">
-                    <label for="">NAME</label>
+                    <label for="">NAME: </label>
                     <input type="text" name="name_ten">
                 </div>
                 <div class="input-group">
-                    <label for="">CITY</label>
+                    <label for="">CITY: </label>
                     <input type="text" name="name_city">
                 </div>
                 <div>
@@ -37,7 +37,6 @@
                     </button>
                 </div>
             </fieldset>
-
         </form>
     </div>
 </body>
