--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,38 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navbar</title>
     <link rel="stylesheet" href="./css/style.css">
+
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th,
+        td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        tr:hover {
+            background-color: rgb(253, 144, 117);
+        }
+
+        .title {
+            font-size: 20px;
+            font-weight: 600;
+        }
+
+        .table-container {
+            padding: 15px 20px;
+        }
+    </style>
 </head>
 
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="/">Home</a>
+        <a href="/create">News</a>
+        <!-- <a href="#contact">Contact</a>
+        <a href="#about">About</a> -->
     </div>
-    <div class="form-add-new">
-        <form action="/create-user" method="post">
-            <fieldset>
-                <legend>form add new user</legend>
-                <div class="input-group">
-                    <label for="">EMAIL: </label>
-                    <input type="email" name="name_email">
-                </div class="input-group">
-                <div class="input-group">
-                    <label for="">NAME: </label>
-                    <input type="text" name="name_ten">
-                </div>
-                <div class="input-group">
-                    <label for="">CITY: </label>
-                    <input type="text" name="name_city">
-                </div>
-                <div>
-                    <button id="save_id">
-                        SAVE
-                    </button>
-                </div>
-            </fieldset>
-        </form>
+    <div class="table-container">
+        <div class="title">list user</div>
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>EMAIL</th>
+                <th>NAME</th>
+                <th>CITY</th>
+            </tr>
+            <tr>
+                <td>Peter</td>
+                <td>Griffin</td>
+                <td>$100</td>
+                <td>kon tum</td>
+            </tr>
+            <tr>
+                <td>Lois</td>
+                <td>Griffin</td>
+                <td>$150</td>
+                <td>$150</td>
+            </tr>
+            <tr>
+                <td>Joe</td>
+                <td>Swanson</td>
+                <td>$300</td>
+                <td>$300</td>
+            </tr>
+            <tr>
+                <td>Cleveland</td>
+                <td>Brown</td>
+                <td>$250</td>
+                <td>$250</td>
+            </tr>
+        </table>
     </div>
 </body>
 
