--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -25,8 +25,8 @@
         }
 
         .title {
-            font-size: 20px;
-            font-weight: 600;
+            font-size: 30px;
+            font-weight: 800;
         }
 
         .table-container {
@@ -43,45 +43,57 @@
         <a href="#about">About</a> -->
     </div>
     <div class="table-container">
-        <%= JSON.stringify(listusers) %>
-            <div class="title">list user</div>
-            <table>
+        <!-- <%= JSON.stringify(listusers) %>      Get value from database                                    -->
+        <div class="title">list user</div>
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>EMAIL</th>
+                <th>NAME</th>
+                <th>CITY</th>
+                <th>ACTION</th>
+            </tr>
+            <!-- <% for (let i=0; i < listusers.length; i++) { %>    old loop
                 <tr>
-                    <th>ID</th>
-                    <th>EMAIL</th>
-                    <th>NAME</th>
-                    <th>CITY</th>
-                    <th>ACTION</th>
-                </tr>
-                <tr>
-                    <td>Peter</td>
-                    <td>Griffin</td>
-                    <td>$100</td>
-                    <td>KON TUM</td>
+                    <td>
+                        <%= listusers[i].id %>
+                    </td>
+                    <td>
+                        <%= listusers[i].email %>
+                    </td>
+                    <td>
+                        <%= listusers[i].name %>
+                    </td>
+                    <td>
+                        <%= listusers[i].city %>
+                    </td>
                     <td>
                         <button class="poiter">EDIT</button>
                         <button class="poiter">DELETE</button>
                     </td>
                 </tr>
+                <% } %> -->
+            <% listusers.forEach(function(user){ %> <!--   forEach     -->
                 <tr>
-                    <td>Lois</td>
-                    <td>Griffin</td>
-                    <td>$150</td>
-                    <td>TP.HCM</td>
+                    <td>
+                        <%= user.id %>
+                    </td>
+                    <td>
+                        <%= user.email %>
+                    </td>
+                    <td>
+                        <%= user.name %>
+                    </td>
+                    <td>
+                        <%= user.city %>
+                    </td>
+                    <td>
+                        <button class="poiter">EDIT</button>
+                        <button class="poiter">DELETE</button>
+                    </td>
                 </tr>
-                <tr>
-                    <td>Joe</td>
-                    <td>Swanson</td>
-                    <td>$300</td>
-                    <td>HA NOI</td>
-                </tr>
-                <tr>
-                    <td>Cleveland</td>
-                    <td>Brown</td>
-                    <td>$250</td>
-                    <td>HUNG YEN</td>
-                </tr>
-            </table>
+                <% }); %>
+        </table>
     </div>
 </body>
 
