--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -88,7 +88,7 @@
                         <%= user.city %>
                     </td>
                     <td>
-                        <button class="poiter">EDIT</button>
+                        <a href="/update">EDIT</a>
                         <button class="poiter">DELETE</button>
                     </td>
                 </tr>
