--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CREATE</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <div class="topnav">
         <a href="/">Home</a>
-        <a class="active" href="#news">Create Users</a>
+        <a class="active" href="/create">Create Users</a>
         <!-- <a href="#contact">Contact</a>
         <a href="#about">About</a> -->
     </div>
@@ -32,7 +32,7 @@
                     <input type="text" name="name_city">
                 </div>
                 <div>
-                    <button id="save_id">
+                    <button class="save_id">
                         SAVE
                     </button>
                 </div>
