--- a/src/views/delete.ejs
+++ b/src/views/delete.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UPDATE A USER</title>
+    <title>DELETE</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -16,28 +16,20 @@
         <a href="#about">About</a> -->
     </div>
     <div class="form-add-new">
-        <form action="/update-user" method="post">
+        <form action="/delete-user" method="post">
             <fieldset>
-                <legend>update a user</legend>
+                <legend>delete a user</legend>
                 <div class="input-group d-node">
                     <label for="">ID: </label>
                     <input type="text" name="name_id" value="<%= useredit.id %>">
                 </div>
                 <div class="input-group">
-                    <label for="">EMAIL: </label>
+                    <label for="">are you sure to delete this user with EMAIL: </label>
                     <input type="email" name="name_email" value="<%= useredit.email %>">
-                </div>
-                <div class="input-group">
-                    <label for="">NAME: </label>
-                    <input type="text" name="name_ten" value="<%= useredit.name %>">
-                </div>
-                <div class="input-group">
-                    <label for="">CITY: </label>
-                    <input type="text" name="name_city" value="<%= useredit.city %>">
                 </div>
                 <div>
                     <button class="save_id">
-                        SAVE
+                        CONFIRM
                     </button>
                 </div>
             </fieldset>
