--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -21,7 +21,7 @@
                 <legend>form add new user</legend>
                 <div class="input-group">
                     <label for="">EMAIL: </label>
-                    <input type="email" name="name_email">
+                    <input type="text" name="name_email">
                 </div class="input-group">
                 <div class="input-group">
                     <label for="">NAME: </label>
